# pyosmo360

./: .gitignore  LICENSE  README.md  pyproject.toml  pyvenv.cfg  requirements.txt
src/pyosmo360/: __init__.py  __main__.py  osmo360.py
